Replacing 'OpenMoko' with 'Openmoko'

--- a/OpenLab.mw
+++ b/OpenLab.mw
@@ -1,4 +1,4 @@
-OpenMoko is going to amplify FOSS in Taiwan. The goal is to collect developers, designers and students and have them to get involved in OpenMoko project. So, OpenLab is a place to promote / amplify FOSS and design in Taiwan. It will allow on-site interaction with FOSS community/school and OpenMoko.
+Openmoko is going to amplify FOSS in Taiwan. The goal is to collect developers, designers and students and have them to get involved in Openmoko project. So, OpenLab is a place to promote / amplify FOSS and design in Taiwan. It will allow on-site interaction with FOSS community/school and Openmoko.
 
 Currently, the first [[OpenLab/zh_tw|OpenLab in Taiwan]] is now on.
 
@@ -6,9 +6,9 @@ Currently, the first [[OpenLab/zh_tw|OpenLab in Taiwan]] is now on.
 
 == OpenLab Goal ==
 
-OpenMoko R&D headquarters is located in Taiwan. In order to have some direct interactions with the Taiwan open source community, OpenMoko has sponsored the establishlishment of OpenLab. This is a physical open space. Everyone is invited to come in to OpenLab to talk with OpenMoko developers, to understand how to get involved in OpenMoko’s project and to chat with some community friends. OpenLab welcomes all the community friends to use it as a place to exchange technical experiments or simply to chat.
+Openmoko R&D headquarters is located in Taiwan. In order to have some direct interactions with the Taiwan open source community, Openmoko has sponsored the establishlishment of OpenLab. This is a physical open space. Everyone is invited to come in to OpenLab to talk with Openmoko developers, to understand how to get involved in Openmoko’s project and to chat with some community friends. OpenLab welcomes all the community friends to use it as a place to exchange technical experiments or simply to chat.
 
-OpenMoko sponsors OpenLab in order to promote the FOSS (Free & Open Source Software) spirit. OpenLab will host its opening ceremony on Saturday November 17, 2007 and will start to operate then. Everyone is welcome to come to this event. Application for this event can be found at: [http://wiki.openmoko.org/wiki/OpenMoko_OpenLab_Opening http://wiki.openmoko.org/wiki/OpenMoko_OpenLab_Opening]。
+Openmoko sponsors OpenLab in order to promote the FOSS (Free & Open Source Software) spirit. OpenLab will host its opening ceremony on Saturday November 17, 2007 and will start to operate then. Everyone is welcome to come to this event. Application for this event can be found at: [http://wiki.openmoko.org/wiki/Openmoko_OpenLab_Opening http://wiki.openmoko.org/wiki/Openmoko_OpenLab_Opening]。
 
 
 {{Languages|OpenLab}}
