Replacing 'OpenMoko' with 'Openmoko'

--- a/OpenLab%2Fzh_tw.mw
+++ b/OpenLab%2Fzh_tw.mw
@@ -1,27 +1,27 @@
-OpenMoko是全世界第一個 100% 開放源碼（open source）的 Linux 手機軟體平臺。OpenMoko 的 project leader, Mr. Sean Moss-Pultz, 於FIC（大眾電腦，臺灣）內部培育這項計畫，並於二零零六年十一月正式對外公開推出。OpenMoko, Inc.（我本墨客股份有限公司）也於二零零七年十月二十三日正式成立，很難想像，這個全球知名的開放源碼 Linux 手機專案的研發總部就位於台灣台北市內湖區。
+Openmoko是全世界第一個 100% 開放源碼（open source）的 Linux 手機軟體平臺。Openmoko 的 project leader, Mr. Sean Moss-Pultz, 於FIC（大眾電腦，臺灣）內部培育這項計畫，並於二零零六年十一月正式對外公開推出。Openmoko, Inc.（我本墨客股份有限公司）也於二零零七年十月二十三日正式成立，很難想像，這個全球知名的開放源碼 Linux 手機專案的研發總部就位於台灣台北市內湖區。
 
-為了讓台灣的朋友們，都能近距離與這個全球知名的 open source 專案接觸，OpenMoko, Inc. 特別設立了「OpenLab」，讓社群朋友與學校都能到現場與 OpenMoko 進行互動，或是學習 Linux 手機技術。
+為了讓台灣的朋友們，都能近距離與這個全球知名的 open source 專案接觸，Openmoko, Inc. 特別設立了「OpenLab」，讓社群朋友與學校都能到現場與 Openmoko 進行互動，或是學習 Linux 手機技術。
 
 == OpenLab 的宗旨 ==
 
-發佈於 2007 年的 OpenMoko 開放源碼專案研發總部設在台灣，為了與台灣的 open source 社群互動並回饋社群，OpenMoko 特別贊助成立了 OpenLab。這是一個實體的開放空間，任何人都可以來到 OpenLab 實驗室，與 OpenMoko 開發者對話、了解如何參與 OpenMoko 專案、與社群朋友聊天聚會。OpenLab 歡迎社群朋友自由使用，也能將這裡當做技術交流的固定聚會場所。
+發佈於 2007 年的 Openmoko 開放源碼專案研發總部設在台灣，為了與台灣的 open source 社群互動並回饋社群，Openmoko 特別贊助成立了 OpenLab。這是一個實體的開放空間，任何人都可以來到 OpenLab 實驗室，與 Openmoko 開發者對話、了解如何參與 Openmoko 專案、與社群朋友聊天聚會。OpenLab 歡迎社群朋友自由使用，也能將這裡當做技術交流的固定聚會場所。
 
 == OpenLab 的計畫案 ==
 
-* [[OpenMoko Wiki Traditional Chinese Translation/zh_tw|OpenMoko Wiki 協作翻譯]]
-* [[OpenMoko Education/zh_tw|OpenMoko Education]]
-** [[OpenMoko Internship/zh_tw|OpenMoko 校園培育計畫]] - OpenMoko Intership Program
-** [[OpenMoko Summer Program/zh_tw|OpenMoko 暑期魔鬼訓練營]] - OpenMoko summer training for students.
+* [[Openmoko Wiki Traditional Chinese Translation/zh_tw|Openmoko Wiki 協作翻譯]]
+* [[Openmoko Education/zh_tw|Openmoko Education]]
+** [[Openmoko Internship/zh_tw|Openmoko 校園培育計畫]] - Openmoko Intership Program
+** [[Openmoko Summer Program/zh_tw|Openmoko 暑期魔鬼訓練營]] - Openmoko summer training for students.
 
 == OpenLab 活動表 ==
 
-* [http://wiki.openmoko.org/wiki/OpenMoko_OpenLab_Opening/zh_tw 2007-11-17(Sat.) OpenMoko OpenLab 開幕活動] OpenLab 於11/17(六) 正式開幕並運轉。在此邀請台灣的社群朋友來參與 OpenMoko OpenLab 的開幕活動。
+* [http://wiki.openmoko.org/wiki/Openmoko_OpenLab_Opening/zh_tw 2007-11-17(Sat.) Openmoko OpenLab 開幕活動] OpenLab 於11/17(六) 正式開幕並運轉。在此邀請台灣的社群朋友來參與 Openmoko OpenLab 的開幕活動。
 
-* [http://wiki.openmoko.org/wiki/OpenLab_2nd_Event/zh_tw 2007-12-19(Wed.) GPL / Apache 授權議題與第二次課程活動] EeePC 面臨 GPL 授權議題的挑戰？產品商業化必須了解的 GPL 授權議題。 OpenMoko OpenLab 邀請中研院自由軟體鑄造場的林誠夏先生為大家講解 GPL 的法律議題。
+* [http://wiki.openmoko.org/wiki/OpenLab_2nd_Event/zh_tw 2007-12-19(Wed.) GPL / Apache 授權議題與第二次課程活動] EeePC 面臨 GPL 授權議題的挑戰？產品商業化必須了解的 GPL 授權議題。 Openmoko OpenLab 邀請中研院自由軟體鑄造場的林誠夏先生為大家講解 GPL 的法律議題。
 
-* [http://wiki.openmoko.org/wiki/OpenMoko_Visits_and_Hiring_Day/zh_tw 2008-01-25(Fri.) OpenMoko 舉辦參觀與面談會] OpenMoko 正式提供工作職位，1/25(週五) 於 OpenMoko 的 OpenLab 將會舉行參觀與面試會，若您對 open source 與 smartphone 有興趣，我們希望邀請您這天與我們餐聚，並了解 OpenMoko 的軟體工作環境。
+* [http://wiki.openmoko.org/wiki/Openmoko_Visits_and_Hiring_Day/zh_tw 2008-01-25(Fri.) Openmoko 舉辦參觀與面談會] Openmoko 正式提供工作職位，1/25(週五) 於 Openmoko 的 OpenLab 將會舉行參觀與面試會，若您對 open source 與 smartphone 有興趣，我們希望邀請您這天與我們餐聚，並了解 Openmoko 的軟體工作環境。
 
-* [http://wiki.openmoko.org/wiki/OpenMoko_Education_Interview/zh_tw 2008-02-14(Fri.) OpenMoko Education 訪談活動] OpenMoko 因為開放源碼的特性，因此很適合教學與研究場合。當天 OpenMoko 將正式發佈校園活動計畫，以及校園的支持辦法，現場將有一個正式的記者訪談會。希望了解更多相關資訊的老師或學生，歡迎到場參觀，自由入場。時間是：02:00PM~04:20PM。
+* [http://wiki.openmoko.org/wiki/Openmoko_Education_Interview/zh_tw 2008-02-14(Fri.) Openmoko Education 訪談活動] Openmoko 因為開放源碼的特性，因此很適合教學與研究場合。當天 Openmoko 將正式發佈校園活動計畫，以及校園的支持辦法，現場將有一個正式的記者訪談會。希望了解更多相關資訊的老師或學生，歡迎到場參觀，自由入場。時間是：02:00PM~04:20PM。
 
 * [http://wiki.openmoko.org/wiki/NTHU_Visiting/zh_tw 2008-04-01(Tue.) 清華大學資工系參訪日]
 
