--- a/Openmoko_supported_devices%2Fzh_tw.mw
+++ b/Openmoko_supported_devices%2Fzh_tw.mw
@@ -10,7 +10,7 @@
 
 * Motorola A780 [http://www.vanille-media.de/images/openmoko-on-a780.jpg OM2007.2]
 
-* Motorola A1200E [http://blog.myspace.cn/index.cfm?fuseaction=blog.view&friendID=1303227936&blogID=304760192 OpenMoko 2007.2]
+* Motorola A1200E [http://blog.myspace.cn/index.cfm?fuseaction=blog.view&friendID=1303227936&blogID=304760192 Openmoko 2007.2]
 
 * [http://en.wikipedia.org/wiki/HTC_Universal HTC Universal] 可使用撥號工具。 [http://linuxtogo.org/~htcpxa/htcuniversal/index.html code:linuxtogo] [http://www.handhelds.org/moin/moin.cgi/UniversalStatus status:handhelds.org]
 
@@ -21,7 +21,7 @@
 * HP iPAQ hx4700 - [http://dominion.kabel.utwente.nl/koen/cms/openmoko-running-on-an-ipaq 詳細參考資訊]
 == 亦可參考 ==
 
-* 你可以在 [[How_to_run_OpenMoko_Apps_on_PC | linux PC]]上執行你的Openmoko應用程式
+* 你可以在 [[How_to_run_Openmoko_Apps_on_PC | linux PC]]上執行你的Openmoko應用程式
 
 * [[Other OSes|其它作業系統]]
 
