Replacing 'OpenMoko' with 'Openmoko'

--- a/OpenmokoFramework%2FStatus_Update_1.mw
+++ b/OpenmokoFramework%2FStatus_Update_1.mw
@@ -87,7 +87,7 @@ Now let's check whether we have a phone somewhere on the bus...
   variant_level=1), dbus.String(u'model'): dbus.String(u'Neo1973 Embedded GSM 
   Modem', variant_level=1), dbus.String(u'revision'): dbus.String(u'HW: GTA, 
   GSM: gsm_ac_gp_fd_pu_em_cph_ds_vc_cal35_ri_36_amd8_ts0-Moko9-beta1', 
-  variant_level=1), dbus.String(u'manufacturer'): dbus.String(u'FIC/OpenMoko', 
+  variant_level=1), dbus.String(u'manufacturer'): dbus.String(u'FIC/Openmoko', 
   variant_level=1)}, signature=dbus.Signature('sv'))
 
 Excellent. That looks like a Modem in a Neo. Is it turned on?
