Replacing 'OpenMoko' with 'Openmoko'

--- a/Cli-framework.mw
+++ b/Cli-framework.mw
@@ -16,7 +16,7 @@ freesmartphone.org interactive command line
 ['LOG_DEBUG', 'LOG_ERR', 'LOG_INFO', 'LOG_WARNING', 'MainLoop', '__builtins__', '__doc__', '__file__', '__name__', 'atexit', 'audio', 'bus', 'code', 'console', 'dbus', 'getInterface', 'getObject', 'gsm', 'gsmcall', 'gsmdevice', 'gsmnetwork', 'gsmpdp', 'gsmsim', 'gsmtest', 'handler', 'hz', 'idle', 'mainloop', 'os', 'readline', 'rlcompleter', 'runmainloop', 'sys', 'syslog']                                                                                     
 >>>                                                                                                                                                      
 >>> gsmdevice.GetInfo()                                                                                                                                  
-dbus.Dictionary({dbus.String(u'imei'): dbus.String(u'354651011204130', variant_level=1), dbus.String(u'model'): dbus.String(u'Neo1973 Embedded GSM Modem', variant_level=1), dbus.String(u'revision'): dbus.String(u'HW: GTA, GSM: gsm_ac_gp_fd_pu_em_cph_ds_vc_cal35_ri_36_amd8_ts0-Moko9-beta1', variant_level=1), dbus.String(u'manufacturer'): dbus.String(u'FIC/OpenMoko', variant_level=1)}, signature=dbus.Signature('sv'))                                         
+dbus.Dictionary({dbus.String(u'imei'): dbus.String(u'354651011204130', variant_level=1), dbus.String(u'model'): dbus.String(u'Neo1973 Embedded GSM Modem', variant_level=1), dbus.String(u'revision'): dbus.String(u'HW: GTA, GSM: gsm_ac_gp_fd_pu_em_cph_ds_vc_cal35_ri_36_amd8_ts0-Moko9-beta1', variant_level=1), dbus.String(u'manufacturer'): dbus.String(u'FIC/Openmoko', variant_level=1)}, signature=dbus.Signature('sv'))                                         
 >>> gsmsim.GetAuthStatus()
 dbus.String(u'READY')
 >>> contacts=gsmsim.RetrievePhonebook()
