Replacing 'OpenMoko' with 'Openmoko'

--- a/Mdbus.mw
+++ b/Mdbus.mw
@@ -123,7 +123,7 @@ dbus.Dictionary({dbus.String(u'imei'): dbus.String(u'354651011602234',
 variant_level=1), dbus.String(u'model'): dbus.String(u'Neo1973 Embedded GSM 
 Modem', variant_level=1), dbus.String(u'revision'): dbus.String(u'HW: GTA, 
 GSM: gsm_ac_gp_fd_pu_em_cph_ds_vc_cal35_ri_36_amd8_ts0-Moko9-beta1', 
-variant_level=1), dbus.String(u'manufacturer'): dbus.String(u'FIC/OpenMoko', 
+variant_level=1), dbus.String(u'manufacturer'): dbus.String(u'FIC/Openmoko', 
 variant_level=1)}, signature=dbus.Signature('sv'))
 
 root@om-gta02:~#                                          
