--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -118,7 +118,7 @@ after that you will need to restart the framework (kill the process and start it
 * Make use of profiles to change the interface easy and fast (interface for mouse, keyboard, a mix of those two, presentations, remote controller for videos and music, ...) - <font color="#FF9900">In progress</font>
 * Top part of screen as touch-pad, row of three mouse buttons across middle and whichever keyboard the user usually uses on the phone popped-up at the bottom as when adding text in any other app. - <font color="#FF9900">In progress</font>
 * A MythTV remote would be handy, just a subset of a BT keyboard for common commands with a few nice icons rather than letters on (large) keys.
-* Avahi search for HTTP services labeled say "remote" via ethernet (BT/LAN or Wifi). MythTV/Elisa and OOPresentation can develop their own html/flash/javascript/etc. "remotes" to hearts content without fine-grain syncing every change of code/GUI/API with your "OpenMoko Remote App". Avahi/HTTP also lets desktop/laptop browsers to control "remotes"; this means a bigger community.
+* Avahi search for HTTP services labeled say "remote" via ethernet (BT/LAN or Wifi). MythTV/Elisa and OOPresentation can develop their own html/flash/javascript/etc. "remotes" to hearts content without fine-grain syncing every change of code/GUI/API with your "Openmoko Remote App". Avahi/HTTP also lets desktop/laptop browsers to control "remotes"; this means a bigger community.
 * Have one Neo work as a keyboard for another Neo (which becomes the screen)! (should be possible even now i guess)
 * Change the icons on the mouse screen, so they are oriented as one's mouse would be. Right now the left mouse button is on the left, which is good. However, the image of the mouse is facing the user and the left mouse button is to the right of the image.
 * '''Add your wish here'''
