--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -5,9 +5,9 @@ This page is intended for ordinary end users of Openmoko smartphones.   It lists
 
 '''Please note that not all of these applications are in a finished format yet.   When they are complete you will be able to download them via a menu on the phone.    At the moment, following a recipe of commands in the console window may be needed to install.   This will of course improve with time :-) '''
 
-'''Please also note that there is ''some risk'' in installing developing software or software from an unknown source!    However, if the license for the code is an open source license then you have the comfort that anyone in the OpenMoko community has the ability to check the operation of the software and thus malicious or vulnerable code is likely to be detected quickly.'''
+'''Please also note that there is ''some risk'' in installing developing software or software from an unknown source!    However, if the license for the code is an open source license then you have the comfort that anyone in the Openmoko community has the ability to check the operation of the software and thus malicious or vulnerable code is likely to be detected quickly.'''
 
-Any problems with the software below should be reported to the individual software developer rather than the OpenMoko core team.
+Any problems with the software below should be reported to the individual software developer rather than the Openmoko core team.
 
 == Applications ==
 
