Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups.mw
+++ b/Openmoko_Local_Groups.mw
@@ -1,5 +1,5 @@
 __TOC__
-'''OpenMoko Local Groups...'''
+'''Openmoko Local Groups...'''
 
 * can be used for developers to meet and get to know each other
 * can be used for developing
@@ -25,7 +25,7 @@ __TOC__
  <nowiki>[[Image: MokoBox.jpg|center]]</nowiki>
 |}
 
-Such as with [[OpenMoko_Local_Groups:_Singapore | Singapore]] or [[OpenMoko_Local_Groups:_San_Francisco | San Francisco]]
+Such as with [[Openmoko_Local_Groups:_Singapore | Singapore]] or [[Openmoko_Local_Groups:_San_Francisco | San Francisco]]
 
 
 == Africa ==
