--- a/Openmoko_Local_Groups:_Antwerp.mw
+++ b/Openmoko_Local_Groups:_Antwerp.mw
@@ -1,4 +1,4 @@
- See [[Talk:OpenMoko_Local_Groups:_Antwerp|discussion]]
+ See [[Talk:Openmoko_Local_Groups:_Antwerp|discussion]]
 
 {|border=1
 !Name
@@ -17,6 +17,6 @@
 |bioinformatics, Linux user since 1998, Python programming
 |Awaiting NeoFreerunner, Mobistar
 |2018 Antwerpen (Berchem)
-|willing to meet other OpenMoko users, exchange ideas and spread the love for Free and Open Source Software in general
+|willing to meet other Openmoko users, exchange ideas and spread the love for Free and Open Source Software in general
 |}
 [[Category:Openmoko Local Groups]]
