Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Belo_Horizonte.mw
+++ b/Openmoko_Local_Groups:_Belo_Horizonte.mw
@@ -1,7 +1,7 @@
-Benvindo à página dos usuários OpenMoko em BH!
+Benvindo à página dos usuários Openmoko em BH!
 
 == Gente ==
-People on the OpenMoko Local Group for BH:
+People on the Openmoko Local Group for BH:
 
 
 {|border=1
