Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Berlin.mw
+++ b/Openmoko_Local_Groups:_Berlin.mw
@@ -1,4 +1,4 @@
-See [[Talk:OpenMoko_Local_Groups:_Berlin|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Berlin|discussion]]
 
 === Mailing list ===
 We have set up a mailinglist a freelists.org. To subscribe either send a mail with the topic 'subscribe' to openmoko-users-berlin-request@freelists.org OR through the web interface: http://www.freelists.org/list/openmoko-users-berlin.
@@ -25,13 +25,13 @@ We have set up a mailinglist a freelists.org. To subscribe either send a mail wi
 |too lazy
 |patiently waiting for GTA02 with WLAN
 |Marzahn
-|I'm interested in VoIP applications on OpenMoko.
+|I'm interested in VoIP applications on Openmoko.
 |
 |
 |-
 |[[User:PH5|pH5]]
 |Coding, RE, Uni
-|OpenMoko, gsmd, GTA01, Magician
+|Openmoko, gsmd, GTA01, Magician
 |Zehlendorf
 |[http://projects.linuxtogo.org/projects/sphyrna Sphyrna]
 |[[Image:Moko.jpg|center]]
@@ -201,7 +201,7 @@ Meeting language is German ;-)
 |every wednesday / 20:00
 |[http://wiki.c-base.org/coredump/WaveLoeten c-base (zusammen mit dem Freifunkertreffen)]
 |Freerunner Release / Hands On
-|See [[Talk:OpenMoko_Local_Groups:_Berlin|discussion]]
+|See [[Talk:Openmoko_Local_Groups:_Berlin|discussion]]
 |-
 |23.08.2007 / 18:00
 |[https://berlin.ccc.de/wiki/CCC_Berlin CCCB] / [https://berlin.ccc.de/wiki/Club_Discordia Club Diskordia]
