Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Birmingham.mw
+++ b/Openmoko_Local_Groups:_Birmingham.mw
@@ -33,5 +33,5 @@ Hopefully we'll be able to organise an event for when a few of us get the neos -
 
 
 
-See [[Talk:OpenMoko_Local_Groups:_Birmingham|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Birmingham|discussion]]
 [[Category:Openmoko Local Groups]]
