Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Braunschweig.mw
+++ b/Openmoko_Local_Groups:_Braunschweig.mw
@@ -1,4 +1,4 @@
- See [[Talk:OpenMoko_Local_Groups:_Braunschweig|discussion]]
+ See [[Talk:Openmoko_Local_Groups:_Braunschweig|discussion]]
 
 === Possible Participants ===
 {|border=1
@@ -12,7 +12,7 @@
 |[[User:DanielWillmann|Daniel]]
 |Openmoko Development
 |Braunschweig
-|Working for OpenMoko
+|Working for Openmoko
 |[[Image: Moko.jpg|center]]
 |[[Image: MokoBox.jpg|center]]
 |-
@@ -26,7 +26,7 @@
 |[[User:Stefan|Stefan]]
 |Openmoko Development
 |Schöppenstedt
-|Working for OpenMoko
+|Working for Openmoko
 |[[Image: Moko.jpg|center]]
 |[[Image: MokoBox.jpg|center]]
 |-
