--- a/Openmoko_Local_Groups:_Bucharest.mw
+++ b/Openmoko_Local_Groups:_Bucharest.mw
@@ -1,4 +1,4 @@
- See [[Talk:OpenMoko_Local_Groups:_Bucharest|discussion]]
+ See [[Talk:Openmoko_Local_Groups:_Bucharest|discussion]]
 
 {|border=1
 !Name
