Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Caracas.mw
+++ b/Openmoko_Local_Groups:_Caracas.mw
@@ -1,4 +1,4 @@
-Welcome to the OpenMoko Local Group @ Caracas, Venezuela!
+Welcome to the Openmoko Local Group @ Caracas, Venezuela!
 
 {|border=1
 !Name
