Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Central_Texas.mw
+++ b/Openmoko_Local_Groups:_Central_Texas.mw
@@ -32,6 +32,6 @@ This group is for Austin/Round Rock and surrounding areas. Hopefully we'll be ab
 
 
 
-See [[Talk:OpenMoko_Local_Groups:_Central_Texas|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Central_Texas|discussion]]
 
 [[Category:Openmoko Local Groups]]
