--- a/Openmoko_Local_Groups:_Cleveland.mw
+++ b/Openmoko_Local_Groups:_Cleveland.mw
@@ -1,4 +1,4 @@
-Are there any other OpenMoko community members located in North East Ohio (Akron, Canton, Cleveland)?
+Are there any other Openmoko community members located in North East Ohio (Akron, Canton, Cleveland)?
 
 {|border=1
 !Name
