Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Denmark.mw
+++ b/Openmoko_Local_Groups:_Denmark.mw
@@ -10,7 +10,7 @@
 |-
 |[[User:Miki|Mikkel Kirkgaard Nielsen]]
 |developer; some assembly, C, some C++, Shell scripting, POSIX etc.
-|Getting OpenMoko (and Neo1973) to rock 
+|Getting Openmoko (and Neo1973) to rock 
 |Esbjerg, Østerbyen
 |
 |[[ Image:Moko.jpg |center]]
