--- a/Openmoko_Local_Groups:_Detroit.mw
+++ b/Openmoko_Local_Groups:_Detroit.mw
@@ -1,4 +1,4 @@
-Are there any other OpenMoko community members located in the Greater Detroit Area?
+Are there any other Openmoko community members located in the Greater Detroit Area?
 
 
 {|border=1
