Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_East_Midlands.mw
+++ b/Openmoko_Local_Groups:_East_Midlands.mw
@@ -1,4 +1,4 @@
-Welcome to OpenMoko East Midlands
+Welcome to Openmoko East Midlands
 
 Anyone else here?
 
@@ -23,6 +23,6 @@ Anyone else here?
 |}
 
 
-See [[Talk:OpenMoko_Local_Groups:_East_Midlands|discussion]]
+See [[Talk:Openmoko_Local_Groups:_East_Midlands|discussion]]
 
 [[Category:Openmoko Local Groups]]
