Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Estonia.mw
+++ b/Openmoko_Local_Groups:_Estonia.mw
@@ -1,4 +1,4 @@
-This is the local user group for organising everyone interested in OpenMoko phones in Estonia together. We can also use this page to discuss the distribution of the phones if we decide to buy them en masse.
+This is the local user group for organising everyone interested in Openmoko phones in Estonia together. We can also use this page to discuss the distribution of the phones if we decide to buy them en masse.
 
 == Members ==
 {|border=1
@@ -27,6 +27,6 @@ This is the local user group for organising everyone interested in OpenMoko phon
 |}
 
 == Discussion ==
-Should we hold the discussion here or on the [[Talk:OpenMoko Local Groups: Estonia | talk page]]? [[User:Yogiz|Yogiz]] 08:43, 3 June 2008 (UTC)
+Should we hold the discussion here or on the [[Talk:Openmoko Local Groups: Estonia | talk page]]? [[User:Yogiz|Yogiz]] 08:43, 3 June 2008 (UTC)
 
 [[Category:Openmoko Local Groups]]
