--- a/Openmoko_Local_Groups:_Eugene.mw
+++ b/Openmoko_Local_Groups:_Eugene.mw
@@ -1,3 +1,3 @@
-No content yet. See [[Talk:OpenMoko_Local_Groups:_Eugene|discussion]]
+No content yet. See [[Talk:Openmoko_Local_Groups:_Eugene|discussion]]
 
 [[Category:Openmoko Local Groups]]
