Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Fargo.mw
+++ b/Openmoko_Local_Groups:_Fargo.mw
@@ -1,4 +1,4 @@
-Welcome to the Fargo OpenMoko page!
+Welcome to the Fargo Openmoko page!
 
 This group is for anyone in Fargo and surrounding areas.
 
