Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Fife.mw
+++ b/Openmoko_Local_Groups:_Fife.mw
@@ -1,4 +1,4 @@
-Welcome to OpenMoko Fife!
+Welcome to Openmoko Fife!
 
 {|border=1
 !Name
@@ -12,6 +12,6 @@ Welcome to OpenMoko Fife!
 |Star, Fife
 |}
 
-See [[Talk:OpenMoko_Local_Groups:_Fife|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Fife|discussion]]
 
 [[Category:Openmoko Local Groups]]
