Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Frankfurt_Main.mw
+++ b/Openmoko_Local_Groups:_Frankfurt_Main.mw
@@ -1,4 +1,4 @@
-'''Aktuelles Treffen: Siehe [[Talk:OpenMoko_Local_Groups:_Frankfurt|discussion]]'''
+'''Aktuelles Treffen: Siehe [[Talk:Openmoko_Local_Groups:_Frankfurt|discussion]]'''
 
 === Possible Participants ===
 {|border=1
@@ -22,7 +22,7 @@ similar to the openroadmap project
 |-
 |[[User:Mickey|mickeyl]]
 |Architecture, Coding, Music
-|OpenMoko development platform
+|Openmoko development platform
 |Frankfurt/Sachsenhausen
 |New-style UI toolkits...
 |[[Image: Moko.jpg|center]]
@@ -94,7 +94,7 @@ similar to the openroadmap project
 |-
 |[[User:self|self]]
 |grafics/design,testing,coding
-|OpenStreetMap with OpenMoko
+|OpenStreetMap with Openmoko
 |Ingelheim
 |waiting for freerunner delivery
 |
