--- a/Openmoko_Local_Groups:_Gothenburg.mw
+++ b/Openmoko_Local_Groups:_Gothenburg.mw
@@ -1,4 +1,4 @@
-Welcome to the Gothenburg OpenMoko page!
+Welcome to the Gothenburg Openmoko page!
 
 {|border=1
 !Namn
@@ -11,6 +11,6 @@ Welcome to the Gothenburg OpenMoko page!
 |[[User:Fwendt|Fredrik Wendt]]|| Okända || Ersätta laptopen || Majorna || - || FreeRunner
 |}
 
-See [[Talk:OpenMoko_Local_Groups:_Gothenburg|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Gothenburg|discussion]]
 
 [[Category:Openmoko Local Groups]]
