Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Helsinki.mw
+++ b/Openmoko_Local_Groups:_Helsinki.mw
@@ -1,4 +1,4 @@
-See [[Talk:OpenMoko Local Groups: Helsinki|discussion]]
+See [[Talk:Openmoko Local Groups: Helsinki|discussion]]
 
 Subgroup of [[Openmoko Local Groups: Finland|Finland]]
 
@@ -13,7 +13,7 @@ Subgroup of [[Openmoko Local Groups: Finland|Finland]]
 |Sysadmin, networking, programming, propaganda
 |Awaiting GTA01Bv4, Neo Advanced
 |Pihlajisto, Helsinki
-|Speaking about OpenMoko at FUUG cruise (tba) and Linux theme night (Nov. 14th)
+|Speaking about Openmoko at FUUG cruise (tba) and Linux theme night (Nov. 14th)
 |-
 |[[User:csnellman|Carl Snellman]]
 |Programming
