--- a/Openmoko_Local_Groups:_Innsbruck.mw
+++ b/Openmoko_Local_Groups:_Innsbruck.mw
@@ -1,4 +1,4 @@
- See [[Talk:OpenMoko_Local_Groups:_Innsbruck|discussion]]
+ See [[Talk:Openmoko_Local_Groups:_Innsbruck|discussion]]
 
 {|border=1
 !Name
