Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Linkoping.mw
+++ b/Openmoko_Local_Groups:_Linkoping.mw
@@ -1,4 +1,4 @@
-Welcome to the Linköping OpenMoko page!
+Welcome to the Linköping Openmoko page!
 
 {|border=1
 !Namn
@@ -15,6 +15,6 @@ Welcome to the Linköping OpenMoko page!
 |}
 
 
-See [[Talk:OpenMoko_Local_Groups:_Linkoping|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Linkoping|discussion]]
 
 [[Category:Openmoko Local Groups]]
