Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_London.mw
+++ b/Openmoko_Local_Groups:_London.mw
@@ -1,4 +1,4 @@
-Welcome to OpenMoko London!
+Welcome to Openmoko London!
 
 Beer and Neo anyone?
 
@@ -115,6 +115,6 @@ Key:
  [[Image: Moko.jpg]] = GTA01
  [[Image: MokoBox.jpg]] = Debug board
 
-See [[Talk:OpenMoko_Local_Groups:_London|discussion]]
+See [[Talk:Openmoko_Local_Groups:_London|discussion]]
 
 [[Category:Openmoko Local Groups]]
