Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Los_Angeles.mw
+++ b/Openmoko_Local_Groups:_Los_Angeles.mw
@@ -1,4 +1,4 @@
-Are there any other OpenMoko community members here?
+Are there any other Openmoko community members here?
 
 {|border=1
 !Name
@@ -10,14 +10,14 @@ Are there any other OpenMoko community members here?
 |-
 |Jose De Jesus Sanchez Morones
 |Technology
-|OpenMoko Fan
+|Openmoko Fan
 |Visalia, as to make you want to write about it CA
 |
 |[[Image: MokoBox.jpg|center]]
 |-
 |[[User:manwithaplan|Kevin]]
 |Programmer, Sys Admin
-|OpenMoko Dreamer
+|Openmoko Dreamer
 |Los Angeles, CA 
 | [[Image: Moko.jpg|center]]
 |
@@ -25,7 +25,7 @@ Are there any other OpenMoko community members here?
 |-
 |[[User:wetmoko|Matthew]]
 |Programmer, PGSQL DB_Arch
-|OpenMoko Pimp
+|Openmoko Pimp
 |Los Angeles, CA 
 | [[Image: Moko.jpg|center]]
 |
@@ -39,13 +39,13 @@ Are there any other OpenMoko community members here?
 |-
 |[[User:jonathan.tsai|Jonathan Tsai]]
 |Software Engineering Grad Student [http://west.cmu.edu/ Carnegie Mellon West]<br>Participant of class project MobileAdvisor.org [http://www.mobileadvisor.org/ Join]
-|OpenMoko Evaluator 
+|Openmoko Evaluator 
 |Irvine, CA
 |
 |
 |-
 |[[User:bsdvodsky|Brian]]
-|OpenMoko Hacking
+|Openmoko Hacking
 |FreeRunner Evaluator 
 |Walnut, CA
 |[[Image: Moko.jpg|center]]
