--- a/Openmoko_Local_Groups:_Lugansk.mw
+++ b/Openmoko_Local_Groups:_Lugansk.mw
@@ -1,4 +1,4 @@
-Welcome to OpenMoko in Lugansk!
+Welcome to Openmoko in Lugansk!
 
 {|border=1
 !Name
@@ -13,6 +13,6 @@ Welcome to OpenMoko in Lugansk!
 |}
 
 
-See [[Talk:OpenMoko_Local_Groups:_London|discussion]]
+See [[Talk:Openmoko_Local_Groups:_London|discussion]]
 
 [[Category:Openmoko Local Groups]]
