Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Madrid.mw
+++ b/Openmoko_Local_Groups:_Madrid.mw
@@ -1,7 +1,7 @@
 ¡Bienvenido a la página de Openmoko Madrid!
 
 == Gentes ==
-Una lista de las gentes que formamos parte de la comunidad de OpenMoko en Madrid:
+Una lista de las gentes que formamos parte de la comunidad de Openmoko en Madrid:
 
 {|border=1
 !Nombre
