Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Montreal.mw
+++ b/Openmoko_Local_Groups:_Montreal.mw
@@ -1,7 +1,7 @@
-Welcome to the Montreal OpenMoko Enthusiasts page!
+Welcome to the Montreal Openmoko Enthusiasts page!
 
 <pre>
-Please update this page with any information about local OpenMoko happenings that you might know about.
+Please update this page with any information about local Openmoko happenings that you might know about.
 </pre>
 
 == Meetings ==
@@ -20,7 +20,7 @@ The following are a list of past and present meetups and demos in and around Mon
 |MeetUp
 |[[User:Eric|Eric Preston]]
 |Mile End, Montreal
-|I'm hosting regular, informal OpenMoko sessions at my apartment in Mile End. I plan to have one at least every month. Goto http://eric.linuxmontreal.com/contact to send me an email asking for directions and to reserve your spot. There is room for about 6-8 people.
+|I'm hosting regular, informal Openmoko sessions at my apartment in Mile End. I plan to have one at least every month. Goto http://eric.linuxmontreal.com/contact to send me an email asking for directions and to reserve your spot. There is room for about 6-8 people.
 |}
 
 === Past ===
@@ -41,7 +41,7 @@ The following are a list of past and present meetups and demos in and around Mon
 
 
 == People ==
-The following is a list of people interested in OpenMoko from in and around Montreal.
+The following is a list of people interested in Openmoko from in and around Montreal.
 {|border=1
 !Name
 !Skills
@@ -125,6 +125,6 @@ The following is a list of people interested in OpenMoko from in and around Mont
 |-|}
 
 
-See [[Talk:OpenMoko_Local_Groups:_Montreal|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Montreal|discussion]]
 
 [[Category:Openmoko Local Groups]]
