Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Munich.mw
+++ b/Openmoko_Local_Groups:_Munich.mw
@@ -1,5 +1,5 @@
 [[Category:Openmoko Local Groups]]
-==Hilf mit, eine Münchner OpenMoko UserGroup aufzubauen!==
+==Hilf mit, eine Münchner Openmoko UserGroup aufzubauen!==
 
 Interessenten können sich hier eintragen. Wenns Interesse gibt, dann treffen wir uns einfach mal wo in München oder Umgebung.
 
