--- a/Openmoko_Local_Groups:_NYC_Metro.mw
+++ b/Openmoko_Local_Groups:_NYC_Metro.mw
@@ -3,7 +3,7 @@
 |-
 |0||Carlos T. Linares || dux || gps use for mapping, location-based triggers, ui customization
 |-
-|1||Dean Collins || Dean.Collins || Funding ASP delivered sotware applications for OpenMoko handsets. [http://www.Cognation.net www.Cognation.net]
+|1||Dean Collins || Dean.Collins || Funding ASP delivered sotware applications for Openmoko handsets. [http://www.Cognation.net www.Cognation.net]
 |-
 |2||Michael Cole||michaelC||Integrating a portable (x-platform) tablet-capable personal knowledge environment (based on Squeak)
 |-
