--- a/Openmoko_Local_Groups:_North_Texas.mw
+++ b/Openmoko_Local_Groups:_North_Texas.mw
@@ -91,6 +91,6 @@ This group is for anyone in the DFW and surrounding areas. Hopefully we'll be ab
 
 
 
-See [[Talk:OpenMoko_Local_Groups:_North_Texas|discussion]]
+See [[Talk:Openmoko_Local_Groups:_North_Texas|discussion]]
 
 [[Category:Openmoko Local Groups]]
