Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Norway.mw
+++ b/Openmoko_Local_Groups:_Norway.mw
@@ -1,10 +1,10 @@
-This page is supposed to be a gathering point for all OpenMoko interested people in Norway.
+This page is supposed to be a gathering point for all Openmoko interested people in Norway.
 
- See [[Talk:OpenMoko_Local_Groups:_Norway|discussion]].
+ See [[Talk:Openmoko_Local_Groups:_Norway|discussion]].
 
 Currently there have been created local groups for the following cities/regions in Norway:
-* [[OpenMoko_Local_Groups:_Oslo|Oslo]]
-* [[OpenMoko_Local_Groups:_Trondheim|Trondheim]]
+* [[Openmoko_Local_Groups:_Oslo|Oslo]]
+* [[Openmoko_Local_Groups:_Trondheim|Trondheim]]
 
 Please sign up on this national list below (especially) if you can't find a local group near you; this national page should also be used to map the need/interest of creating more local groups. Some overlapping info may occur.
 
