Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Oslo.mw
+++ b/Openmoko_Local_Groups:_Oslo.mw
@@ -1,4 +1,4 @@
-Welcome to the OpenMoko group for people near Oslo, [[OpenMoko_Local_Groups:_Norway|Norway]]!
+Welcome to the Openmoko group for people near Oslo, [[Openmoko_Local_Groups:_Norway|Norway]]!
 
 This page is supposed to function as a means for Openmoko interested people near Oslo to find each other and get organized. Since the community is still quite small, please remember to add yourself to the list.
 
@@ -82,6 +82,6 @@ We have a Google Group http://groups.google.com/group/gta0x with a mailing list 
 !
 |}
 
- See also [[Talk:OpenMoko_Local_Groups:_Norway]] for national matters.
+ See also [[Talk:Openmoko_Local_Groups:_Norway]] for national matters.
 
 [[Category:Openmoko Local Groups]]
