--- a/Openmoko_Local_Groups:_Pittsburgh.mw
+++ b/Openmoko_Local_Groups:_Pittsburgh.mw
@@ -1,4 +1,4 @@
-Are there any other OpenMoko community members located in South Western Pennsylvania?
+Are there any other Openmoko community members located in South Western Pennsylvania?
 
 {|border=1
 !Name
