Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Salt_Lake.mw
+++ b/Openmoko_Local_Groups:_Salt_Lake.mw
@@ -1,4 +1,4 @@
-Welcome to the Salt Lake OpenMoko page!
+Welcome to the Salt Lake Openmoko page!
 
 This group is for anyone near Salt Lake.
 
@@ -35,7 +35,7 @@ This group is for anyone near Salt Lake.
 |-
 |[[User:jcarroll|James Carroll]]
 |C, Perl, Java, Licensing,
-|I would like to work for OpenMoko full-time
+|I would like to work for Openmoko full-time
 |Provo
 |Saving up to get mine...
 
