--- a/Openmoko_Local_Groups:_San_Francisco.mw
+++ b/Openmoko_Local_Groups:_San_Francisco.mw
@@ -1,4 +1,4 @@
-Are there any other OpenMoko community members here?
+Are there any other Openmoko community members here?
 
 {|border=1
 !Name
@@ -94,7 +94,7 @@ Are there any other OpenMoko community members here?
 |-
 |[[User:Michaelshiloh|Michael Shiloh]]
 |Programmer, teacher
-|Developer Relations and Evangelist for OpenMoko
+|Developer Relations and Evangelist for Openmoko
 |San Francisco, CA (live and work in the city)
 | [[Image: Moko.jpg|center]]
 | [[Image: MokoBox.jpg|center]]
@@ -143,7 +143,7 @@ Are there any other OpenMoko community members here?
 |-
 |[[User:jonathan.tsai|Jonathan Tsai]]
 |Software Engineering Grad Student [http://west.cmu.edu/ Carnegie Mellon West]<br>Participant of class project MobileAdvisor.org [http://www.mobileadvisor.org/ Join]
-|OpenMoko Evaluator 
+|Openmoko Evaluator 
 |San Jose, CA
 |
 |-
