Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Scotland.mw
+++ b/Openmoko_Local_Groups:_Scotland.mw
@@ -1,4 +1,4 @@
-Welcome to OpenMoko Scotland!
+Welcome to Openmoko Scotland!
 
 
 {|border=1
@@ -14,6 +14,6 @@ Welcome to OpenMoko Scotland!
 |}
 
 
-See [[Talk:OpenMoko_Local_Groups:_Scotland|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Scotland|discussion]]
 
 [[Category:Openmoko Local Groups]]
