--- a/Openmoko_Local_Groups:_Singapore.mw
+++ b/Openmoko_Local_Groups:_Singapore.mw
@@ -1,4 +1,4 @@
-See [[Talk:OpenMoko_Local_Groups:_Singapore|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Singapore|discussion]]
 
 {|border=1
 !Name
