--- a/Openmoko_Local_Groups:_Spain.mw
+++ b/Openmoko_Local_Groups:_Spain.mw
@@ -1,8 +1,8 @@
 __TOC__
 
 Spanish cities with local groups:
-* [[OpenMoko_Local_Groups:_Madrid|Madrid]]
+* [[Openmoko_Local_Groups:_Madrid|Madrid]]
 * [[Openmoko_Local_Groups:_Tenerife|Santa Cruz de Tenerife]]
-* [[OpenMoko_Local_Groups:_Valencia|Valencia]]
+* [[Openmoko_Local_Groups:_Valencia|Valencia]]
 
 [[Category:Openmoko Local Groups]]
