Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Switzerland.mw
+++ b/Openmoko_Local_Groups:_Switzerland.mw
@@ -21,7 +21,7 @@ Diese Tabelle darf gerne noch ergänzt werden ;) Ich denke 3-4 Leute wären opti
 == Past Activities ==
 * [http://www.openexpo.ch/openexpo-2008-bern OpenExpo'08 Bern]
 * [http://lug.zhaw.ch/wiki/Distro-Bash_2007 Distro-Bash Winterthur]
-* OpenMoko booth at the OpenExpo'07 Zurich
+* Openmoko booth at the OpenExpo'07 Zurich
 
 
 == Buying Openmoko Neo FreeRunner in Switzerland ==
@@ -29,7 +29,7 @@ Diese Tabelle darf gerne noch ergänzt werden ;) Ich denke 3-4 Leute wären opti
 [[GroupSales#Switzerland]]
 
 ===Distributors===
-If you are interested in getting an OpenMoko in your post box, drop me a mail at jec at jesc dot ch . I'm making a grouped order for Switzerland people.
+If you are interested in getting an Openmoko in your post box, drop me a mail at jec at jesc dot ch . I'm making a grouped order for Switzerland people.
 
 Website: http://www.jesc.ch/openmoko
 
