Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Sydjylland.mw
+++ b/Openmoko_Local_Groups:_Sydjylland.mw
@@ -1,5 +1,5 @@
 === Possible Participants ===
-We'll hang out at [[OpenMoko_Local_Groups:_Denmark]] until it gets too crowded there.
+We'll hang out at [[Openmoko_Local_Groups:_Denmark]] until it gets too crowded there.
 
 {|border=1
 !Name
