Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Szczecin.mw
+++ b/Openmoko_Local_Groups:_Szczecin.mw
@@ -1,4 +1,4 @@
-<b> Szczecin OpenMoko Users Group </b>
+<b> Szczecin Openmoko Users Group </b>
 
 <table border="1" cellpadding="4">
 <tr>
@@ -17,7 +17,7 @@
     <td>User and developer</td>
     <td>[[Image: Moko.jpg|center]]</td>
     <td>[[Image: MokoBox.jpg|center]]</td>
-    <td>First OpenMoko 2007.2 impression: it's quite nice but VERY VERY SLOW.</td>
+    <td>First Openmoko 2007.2 impression: it's quite nice but VERY VERY SLOW.</td>
 </tr>
 </table>
 
