--- a/Openmoko_Local_Groups:_Tenerife.mw
+++ b/Openmoko_Local_Groups:_Tenerife.mw
@@ -4,7 +4,7 @@ De momento somos 5 a la espera del Freerunner vía [[IberiaGroupSale|IberiaGroup
 
 Pedimos una placa de debug para tenerla por aquí, por si hace falta <strike>destrozar</strike> <strike>arreglar</strike> algo.
 
-Si todavia no tienes uno, animate y si tienes dudas, pregúntanos sin mosca. Somos todos de [http://www.gulic.org/ GULiC] así y la forma más fácil de localizarnos es en el webchat de la web de GULiC. Como casualmente somos todos de Tenerife, el grupo lo bauticé Tenerife, pero si tienes un OpenMoko y eres de otra isla, sobre la marcha nos renombramos a grupo de [[Openmoko_Local_Groups:_Canarias|Canarias]].
+Si todavia no tienes uno, animate y si tienes dudas, pregúntanos sin mosca. Somos todos de [http://www.gulic.org/ GULiC] así y la forma más fácil de localizarnos es en el webchat de la web de GULiC. Como casualmente somos todos de Tenerife, el grupo lo bauticé Tenerife, pero si tienes un Openmoko y eres de otra isla, sobre la marcha nos renombramos a grupo de [[Openmoko_Local_Groups:_Canarias|Canarias]].
 
 Estos somos nosotros:
 
