Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Toronto.mw
+++ b/Openmoko_Local_Groups:_Toronto.mw
@@ -10,7 +10,7 @@ Oshawa, Pickering, Aurora, Orangeville, even Hamilton; you're good!
 |-
 |[[User:Historybuff|Gerald A]]
 |Programming
-|Helping with Wikiversity Course on OpenMoko
+|Helping with Wikiversity Course on Openmoko
 |Toronto
 |
 |-
