Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Umea.mw
+++ b/Openmoko_Local_Groups:_Umea.mw
@@ -1,4 +1,4 @@
-Welcome to the Umea OpenMoko page!
+Welcome to the Umea Openmoko page!
 
 {|border=1
 !Namn
@@ -14,6 +14,6 @@ Welcome to the Umea OpenMoko page!
 |}
 
 
-See [[Talk:OpenMoko_Local_Groups:_Umea|discussion]]
+See [[Talk:Openmoko_Local_Groups:_Umea|discussion]]
 
 [[Category:Openmoko Local Groups]]
