Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Vancouver.mw
+++ b/Openmoko_Local_Groups:_Vancouver.mw
@@ -8,7 +8,7 @@
 |-
 |mmontour
 |Developer
-|Hoping to organize an OpenMoko presentation for [http://www.vanlug.bc.ca VanLUG] later this year.
+|Hoping to organize an Openmoko presentation for [http://www.vanlug.bc.ca VanLUG] later this year.
 |Vancouver
 |[[Image: Moko.jpg|center]]
 |[[Image: MokoBox.jpg|center]]
