Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Victoria.mw
+++ b/Openmoko_Local_Groups:_Victoria.mw
@@ -8,7 +8,7 @@
 |-
 |[[User:VI|Vancouver Island Geek]]
 |User
-|Hoping to organize an OpenMoko presentation for [http://www.yashy.com/idea/index.php?title=VictoriaChapter] Idea Society meeting later this year.
+|Hoping to organize an Openmoko presentation for [http://www.yashy.com/idea/index.php?title=VictoriaChapter] Idea Society meeting later this year.
 |Victoria
 |[[Image: Moko.jpg|center]]
 |
