Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Vienna.mw
+++ b/Openmoko_Local_Groups:_Vienna.mw
@@ -1,4 +1,4 @@
- See [[Talk:OpenMoko_Local_Groups:_Vienna|discussion]]
+ See [[Talk:Openmoko_Local_Groups:_Vienna|discussion]]
 
 {|border=1
 !Name
@@ -43,7 +43,7 @@
 |-
 |Johann
 |Linux, MacOS X, Programming, RTLinux/GPL
-|develop OpenMoko Apps
+|develop Openmoko Apps
 |Vienna 1080
 |want to join metalab!
 |[[Image: Moko.jpg|center]]
@@ -52,9 +52,9 @@
 |-
 |Jay Vaughan
 |Linux, Embedded, DIY Hardware, MIDI, Audio, Synthesizers, MacOS X, Programming, RTLinux/GPL
-|My purpose is to develop interesting OpenMoko music and telephone Apps.
+|My purpose is to develop interesting Openmoko music and telephone Apps.
 |Vienna 1150
-|I am active at MetaLab, and would like to organize OpenMoko VIENNA meetings regularly at MetaLab, so if you are interested please let me know!  Nick: torpor in #openmoko
+|I am active at MetaLab, and would like to organize Openmoko VIENNA meetings regularly at MetaLab, so if you are interested please let me know!  Nick: torpor in #openmoko
 |[[Image: Moko.jpg|center]]
 |[[Image: MokoBox.jpg|center]]
 |
