/* Step 2. Preparare il Neo FreeRunner */

--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -514,6 +514,8 @@ Successivamente dovete cambiare i permessi al file:
 
 Spegnere il FreeRunner se è acceso ed entrare nell'U-Boot della NOR Flash. Per svolgere l'aggiornamento il Neo Freerunner ha bisogno di essere dentro l'U-Boot.
 
+[[Image:menu15.jpg|thumb|Entra nell'U-Boot della NOR Flash, connetti il tuo Neo con il sistema Linux attraverso il cavo USB]]
+
 Collegarlo al PC tramite cavo USB e dare il comando ./dfu-util -l
 
 Il comando restituirà una stringa simile a questa:
