Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Warsaw.mw
+++ b/Openmoko_Local_Groups:_Warsaw.mw
@@ -1,4 +1,4 @@
-Witajcie na warszawskiej stronie projektu OpenMoko!
+Witajcie na warszawskiej stronie projektu Openmoko!
 
 
 
@@ -31,6 +31,6 @@ Witajcie na warszawskiej stronie projektu OpenMoko!
 
 
 
-Zobacz [[Talk:OpenMoko_Local_Groups:_Warsaw|rozmowy]]
+Zobacz [[Talk:Openmoko_Local_Groups:_Warsaw|rozmowy]]
 
 [[Category:Openmoko Local Groups]]
