Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Local_Groups:_Washington.mw
+++ b/Openmoko_Local_Groups:_Washington.mw
@@ -1,4 +1,4 @@
-Trying to start an OpenMoko group here in the heartland of the beast - you know who I'm talking about...
+Trying to start an Openmoko group here in the heartland of the beast - you know who I'm talking about...
 
 cavaughan at gmail dot com
 
