Replacing 'OpenMoko' with 'Openmoko'

--- a/Openmoko_Wiki_Editing_Guidelines%2Fde.mw
+++ b/Openmoko_Wiki_Editing_Guidelines%2Fde.mw
@@ -8,7 +8,7 @@ Unsere Openmoko Wiki Bearbeitungsrichtlinien sind gedacht, um unsere Benutzer in
 
 == Regeln ==
 
-# Beim Hinzufügen von Informationen (im speziellen bei Seiten) über Hardware, bedenke dass der Neo 1973 nur eine mögliche Hardwarevariante darstellt auf welcher OpenMoko läuft. Folglich:
+# Beim Hinzufügen von Informationen (im speziellen bei Seiten) über Hardware, bedenke dass der Neo 1973 nur eine mögliche Hardwarevariante darstellt auf welcher Openmoko läuft. Folglich:
 ## Erstelle nicht eine allgemeine Seite wie "Batterie" sondern "Neo 1973 Batterie"
 ## Wenn es Sinn macht allgemeine Seiten zu benutzen, benutze einen Abschnitt per Gerät und stelle sicher, dass von Neo 1973 spezifischen Seiten auf den Abschnitt welcher Neo 1973 beschreibt verlinkt wird
 # Das Wiki ist grundsätzlich für faktische Informationen für das aktuelle Projekt Software gedacht. Die Hardware-Rubrik dürfte also noch unterentwickelt sein. Folglich:
